Ce 13191 remove mobile chip endpoint (#29073)
* chore: initial deletion of check in controller and related files

* chore: delete unused cassettes for check in

* Auto-generate openapi.json from openapi.yaml

* Restore CHIP VCR cassettes still referenced by spec/lib/chip/service_spec.rb

---------
